--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
 	margin: 0;
 	padding: 0;
@@ -28,15 +27,15 @@ body{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: 20px;
+	padding:10px;
 	color: #ffffff;
 }
 
 .container img{
-  width: 30%; /* Tamanho da imagem */
+  width: 25%; /* Tamanho da imagem */
   height: 45%; /* Tamanho da imagem */
 	padding: 0.2em;
-	background: linear-gradient(45deg, #2500cc, #c5577c, hsl(251, 69%, 76%), #2500cc); /* Gradiente estilo Instagram */
+	background: linear-gradient(45deg, #2500cc, #ff2a71, hsl(251, 98%, 24%), #2500cc); /* Gradiente estilo Instagram */
   border-radius: 100%; /* Torna a imagem circular */
   object-fit: cover; /* Ajusta a imagem ao círculo */
   background-color: #ffffff; /* Cor de fundo para suavidade */
@@ -59,7 +58,7 @@ a{
 }
 
 .degrade{
-	background: linear-gradient(to right, #2500cc, #c5577c, hsl(251, 69%, 76%), #2500cc);
+	background: linear-gradient(to right, #2500cc, #ff2a71, hsl(251, 98%, 24%), #2500cc);
 	animation: rgb-line 7s infinite linear; /* Animação contínua */
 	background-size: 300%; /* Aumenta o tamanho do gradiente para dar efeito de movimento */
 }
@@ -133,6 +132,61 @@ a.link button:hover, footer a.btn-footer:hover{
 	transition: .2s;
 }
 
+/* Estilo para o vídeo de fundo */
+#background-video {
+    position: fixed; /* Fixa o vídeo para cobrir toda a tela */
+    top: 0;
+    left: 0;
+    width: 100%; /* Faz o vídeo ocupar 100% da largura */
+    height: 100%; /* Faz o vídeo ocupar 100% da altura */
+    object-fit: cover; /* Corta o vídeo para se ajustar sem distorção */
+    z-index: -1; /* Coloca o vídeo atrás de outros elementos */
+    pointer-events: none; /* Impede interações no vídeo */
+    user-select: none; /* Evita seleção do vídeo */
+    background-color: black; /* Cor de fundo como fallback */
+}
+
+
+/* Botão de mute */
+.mute-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: transparent;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.5em;
+    transition: background 0.3s;
+}
+
+.mute-button:hover {
+    background: transparent;
+}
+
+/* Estilo do contador de visualizações */
+.view-counter {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1.2em;
+    font-family: 'Outfit', sans-serif;
+    z-index: 10; /* Garante que o contador esteja visível acima de outros elementos */
+}
+
+.view-counter p {
+    margin: 0;
+    font-weight: bold;
+}
+
+
+
+
 /* Estilo do footer */
 footer {
   color: #fff; /* Texto claro */
@@ -166,5 +220,3 @@ footer p {
   }
 
 }
-
-
